--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,28 @@ version: '3.8'
 services:
   web:
     build: .
-    command: uvicorn university_management.main:app --host 0.0.0.0
+    command: bash -c 'while !</dev/tcp/db/5432; do sleep 1; done; uvicorn university_management.main:app --host 0.0.0.0'
     volumes:
       - .:/university_management
     ports:
       - 8000:8000
+    environment:
+      - DATABASE_URL=postgresql://admin:admin@db:5432/university_management_db
+    depends_on:
+      - db
+      - adminer
 
   db:
-    image: postgres
+    image: postgres:15.3-bullseye
     restart: always
+    ports:
+      - 5432
     environment:
-      POSTGRES_PASSWORD: example
-    volumes:
-      - .:/docker-entrypoint-initdb.d
+      POSTGRES_DB: university_management_db
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      # volumes:
+      # - ./init.sql:/docker-entrypoint-initdb.d/init.sql
 
   adminer:
     image: adminer
