--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,17 @@
 anyio==3.7.0
-asyncpg==0.27.0
 click==8.1.3
-databases==0.6.2
 exceptiongroup==1.1.1
-fastapi==0.96.0
-greenlet==2.0.2
+fastapi==0.98.0
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
-ormar==0.12.1
-psycopg2-binary==2.9.6
-pydantic==1.10.4
+psycopg==3.1.9
+psycopg-binary==3.1.9
+psycopg-pool==3.1.7
+pydantic==1.10.9
 python-dotenv==1.0.0
 PyYAML==6.0
 sniffio==1.3.0
-SQLAlchemy==1.4.41
 starlette==0.27.0
 typing_extensions==4.6.3
 uvicorn==0.22.0
