--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 anyio==3.7.0
 click==8.1.3
 exceptiongroup==1.1.1
-fastapi==0.98.0
+fastapi==0.95.2
+fastapi-views==0.0.5
 h11==0.14.0
 httptools==0.5.0
 idna==3.4
+orjson==3.8.9
+prometheus-client==0.17.0
 psycopg==3.1.9
 psycopg-binary==3.1.9
 psycopg-pool==3.1.7
@@ -13,6 +16,7 @@ python-dotenv==1.0.0
 PyYAML==6.0
 sniffio==1.3.0
 starlette==0.27.0
+starlette-exporter==0.16.0
 typing_extensions==4.6.3
 uvicorn==0.22.0
 uvloop==0.17.0
